@@ -229,7 +229,7 @@ function ENT:CalcRPM( EngPhys )
 	Wire_TriggerOutput(self.Entity, "Power", math.floor(Power))
 	Wire_TriggerOutput(self.Entity, "RPM", self.FlyRPM)
 	self.Sound:ChangePitch(math.min(20 + SmoothRPM/50,255))
-	self.Sound:ChangeVolume(0.2 + self.Throttle/4)
+	self.Sound:ChangeVolume(0.2 + self.Throttle/1.5)
 	
 	return RPM
 	
